<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_photo"
                android:layout_width="200dp"
                android:layout_height="298dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="190dp"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:layout_height="299dp"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/screen_background_dark"
                    android:contentDescription="@string/photo_cover_film"/>


            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/screen_background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/photo_background"/>

            <ImageView
                android:id="@+id/icon_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/outline_live_tv_white_24dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_trailer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/watch_trailer"/>

            <TextView
                android:id="@+id/tv_trailer"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/watch_trailer"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/cd_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_trailer" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="8dp"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/title"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="judul"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/genre"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/cd_title"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="genre"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/rating"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="rating"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/duration"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/tv_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="50dp"
                tools:text="duration"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cd_photo"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/synopsis"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cd_photo" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="desc"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/actors"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <TextView
                android:id="@+id/tv_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="@string/actors"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/directors"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_actors" />

            <TextView
                android:id="@+id/tv_directors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="directors"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/production"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_directors" />

            <TextView
                android:id="@+id/tv_production"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="production"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/release_date"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_production" />

            <TextView
                android:id="@+id/tv_releasedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:text="releasedate"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/country"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_releasedate" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="20dp"
                tools:text="country"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>